Updated JQuery UI reference in knob

--- a/knob.html
+++ b/knob.html
@@ -19,9 +19,7 @@
 		<link href="http://fonts.googleapis.com/css?family=Cabin:400,400italic,700" rel="stylesheet" type="text/css">
 
 		<!-- JQuery UI -->
-		<link rel="stylesheet" href="http://kjsb25web.azurewebsites.net/libraries/jquery-ui-1.11.4.custom/jquery-ui.min.css">
-		<script src="http://kjsb25web.azurewebsites.net/libraries/jquery-ui-1.11.4.custom/external/jquery/jquery.js"></script>
-		<script src="http://kjsb25web.azurewebsites.net/libraries/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
 
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 
