--- a/knob.html
+++ b/knob.html
@@ -3,26 +3,19 @@
 	<head>
 		<title>Knob</title>
 		<meta charset="UTF-8">
-
 		<!-- Prevent Caching -->
-
-
 		<meta http-equiv="cache-control" content="max-age=0" />
 		<meta http-equiv="cache-control" content="no-cache" />
 		<meta http-equiv="expires" content="0" />
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-store" />
-
-
 		<link rel="icon" href="bombpics/favicon.ico" type="image/x-icon" />
 		<link href="http://fonts.googleapis.com/css?family=Cabin:400,400italic,700" rel="stylesheet" type="text/css">
-
-		<!-- JQuery UI -->
-		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
-
+		<!-- JQuery and Jquery UI -->
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="style/style.css">
-
 		<script src="bombmodules.js"></script>
 	</head>
 	<body onload=knobRun()>
